--- a/kursovaya2/kursovaya2.vcxproj.filters
+++ b/kursovaya2/kursovaya2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="ProxyBit.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="algorithmObj.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -39,6 +42,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="ProxyBit.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="algorithmObj.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
