--- a/kursovaya2/kursovaya2.vcxproj
+++ b/kursovaya2/kursovaya2.vcxproj
@@ -148,19 +148,21 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>C:\Users\ShlR0\source\repos\kursovaya2\kursovaya2\x64\Release;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="algorithmObj.h" />
+    <ClInclude Include="directMethod.h" />
     <ClInclude Include="Interval.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="ProxyBit.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Algorithm.cpp" />
+    <ClCompile Include="directMethod.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="algorithmObj.cpp" />
     <ClCompile Include="Interval.cpp" />
-    <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
